--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,10 @@
     <string name="app_name">Favoreat</string>
     <string name="title_activity_maps">Favoreat</string>
     <string name="search">Search</string>
-    <string-array name="menu_array">
-        <item>Test</item>
-        <item>Test2</item>
-        <item>Test3</item>
-    </string-array>
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
     <string name="app_not_available">Sorry, there\'s no web browser available</string>
+    <string name="home_string">Home</string>
+    <string name="account_string">My account</string>
+    <string name="friends_string">My friends</string>
 </resources>
