--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="title_activity_maps">Favoreat</string>
     <string name="search">Search</string>
     <string name="sort">Sort</string>
+    <string name="back">Back</string>
+    <string name="validate">Validate</string>
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
     <string name="app_not_available">Sorry, there\'s no web browser available</string>
@@ -11,4 +13,9 @@
     <string name="friends_string">My friends</string>
     <string name="use_camera">Take a picture of your bill and we\'ll scan it to extract useful information</string>
     <string name="use_input">... Or use direct input</string>
+    <string name="name">Name</string>
+    <string name="address">Address</string>
+    <string name="cuisine_type">Cuisine type</string>
+    <string name="prix">Price</string>
+    <string name="price">price</string>
 </resources>
