--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="cuisine_type">Cuisine type</string>
     <string name="prix">Price</string>
     <string name="price">price</string>
+    <string name="GPS_permission">Please allow GPS permission in App Settings to get your location.</string>
+    <string name="GPS_permission_denied">Permission denied, you cannot access location data.</string>
 </resources>
